--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <center>
 
 <h1>How to grunch</h1>
-<img src="https://i.imgur.com/x9oA13s.png">
+<img src="https://i.imgur.com/x9oA13s.png" style="width: 50%; height: 50%"/>
 <h3 >So you want to learn how to deal with this wacky little <span id="guytext">dude</span>? Well here's how!  </h3>
 <h2 id="grunchtext">something went wrong!</h2>
 </center>
