--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src="https://i.imgur.com/x9oA13s.png" style="width: 50%; height: 50%" title="Secret Grunch rules text: '?' is not a number until it can be determined, either by the static CDA text on this website or the triggered Grunch ability. If '?' remains undefined, it is not zero. A Grunch with no P/T cannot die to damage or as a result of having 'zero toughness'. If '?' changes after it has been determined to be a number, it changes globally for all creatures with a '?' in their P/T box."/>
 <h3 >So you want to learn how to deal with this wacky little <span id="guytext">dude</span>? Well here's how!  </h3>
 <h2 id="grunchtext">something went wrong!</h2>
-<h2 id="flavortext">something went wrong!</h2>
+  <i><h2 id="flavortext">something went wrong!</h2></i>
 </center>
 
 <script type="text/javascript" src="js/script.js"></script>
