--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <link type="text/css" rel="stylesheet" href="css/style.css"/>
 </head>
-<body style="background-color:#b5e61d">
+<body style="background-color:#b5e61e">
 <center>
 
 <h1>How to Grunch</h1>
